# Blockchain_PDG

./: .gitignore  CONTRIBUTING.md  README.md  journal_de_travail.md  script_pour_presentation.sh  specification.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  pr-validate.yml
Blockchain/: CMakeLists.txt
Blockchain/src/: Block.cpp  Block.hpp  BlockChain.hpp  Blockchain.cpp  Blockchain.hpp  Key.hpp  Transaction.hpp  config.hpp  key.cpp  key.hpp  main.cpp
Blockchain/src/cryptography/: crypto.cpp  crypto.hpp  key.hpp
Blockchain/src/network/: BinaryProtocol.hpp  NodeNetwork.cpp  NodeNetwork.hpp  PeerInfo.hpp  TcpConnection.hpp
Blockchain/src/test/: crypto.cpp  crypto.hpp
Blockchain/src/transaction/: BlockTransactions.cpp  BlockTransactions.hpp  Output.cpp  Output.hpp  OutputReference.cpp  OutputReference.hpp  Transaction.cpp  Transaction.hpp  TransactionPool.cpp  TransactionPool.hpp  Transactions.hpp  UTXOs.hpp
Blockchain_desktop_PDG/: .gitignore  CMakeLists.txt  arborescence.txt
Blockchain_desktop_PDG/.github/workflows/: ci.yml
Blockchain_desktop_PDG/qml/: Main.qml
Blockchain_desktop_PDG/qml/components/: ActionButton.qml  MiningButton.qml  StatsItem.qml  TransactionItem.qml
Blockchain_desktop_PDG/qml/styles/: Theme.qml
Blockchain_desktop_PDG/src/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  config.hpp  main.cpp  resources.qrc
Blockchain_desktop_PDG/src/cryptography/: crypto.cpp  crypto.hpp
Blockchain_desktop_PDG/src/network/: BinaryProtocol.hpp  NodeNetwork.cpp  NodeNetwork.hpp  PeerInfo.hpp
Blockchain_desktop_PDG/src/test/: crypto.cpp
Blockchain_desktop_PDG/src/transaction/: BlockTransactions.cpp  BlockTransactions.hpp  Output.hpp  OutputReference.hpp  Transaction.cpp  Transaction.hpp  TransactionPool.cpp  TransactionPool.hpp
Blockchain_desktop_PDG/src/ui/: BlockchainFacade.hpp  TransactionListModel.hpp  WalletBackend.cpp  WalletBackend.hpp
Blockchain_desktop_PDG/tests/: test_basic.cpp
documentation/: journal_de_travail.md  processus_de_travail.md  specification.md
packaging/linux/: Blockchain_desktop_PDG.desktop
packaging/linux/appimage/: app.desktop
website/: .dockerignore  .gitignore  Caddyfile  Dockerfile  docker-compose.yml  jest.config.ts  jest.setup.ts  package-lock.json  package.json
website/__tests__/: AboutPage.test.tsx  ClickerPage.test.tsx  Download.test.tsx  LandingPage.test.tsx
website/public/clicker/: cursor+2x.png:Zone.Identifier  cursor+5x.png:Zone.Identifier
website/public/downloads/: test.txt
website/src/app/: page.tsx
website/src/app/about/: page.tsx
website/src/app/clicker/: page.tsx
website/src/app/download/: page.tsx
